syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/grpc/scheduler";
package scheduler;
import "google/protobuf/empty.proto";

service Scheduler {
	rpc CreateDefaultCommands(CreateDefaultCommandsRequest) returns (google.protobuf.Empty) {}
	rpc CreateDefaultRoles(CreateDefaultRolesRequest) returns (google.protobuf.Empty) {}
}

message CreateDefaultCommandsRequest {
	repeated string usersIds = 1;
}

message CreateDefaultRolesRequest {
	repeated string usersIds = 1;
}
